--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ footer{
 
 <!-- HERO -->
 <section class="hero container">
-    <h1>Tecuse IT Solutions</h1>
+    <h1>TECUSE IT SOLUTIONS</h1>
     <p>We provide high-quality Refurbished products at the best prices.</p>
     <a href="#products" class="btn">Shop Now</a>
 </section>
@@ -220,6 +220,38 @@ footer{
         </div>
 
         <div class="product-card">
+            <img src="mouse.jpg" alt="">
+            <h3>Gaming Mouse RGB</h3>
+            <p>Customizable buttons with RGB lighting.</p>
+            <div class="price">₹799</div>
+            <a href="#" class="buy-btn">Buy Now</a>
+        </div>
+
+         <div class="product-card">
+            <img src="mouse.jpg" alt="">
+            <h3>Gaming Mouse RGB</h3>
+            <p>Customizable buttons with RGB lighting.</p>
+            <div class="price">₹799</div>
+            <a href="#" class="buy-btn">Buy Now</a>
+        </div>
+
+         <div class="product-card">
+            <img src="mouse.jpg" alt="">
+            <h3>Gaming Mouse RGB</h3>
+            <p>Customizable buttons with RGB lighting.</p>
+            <div class="price">₹799</div>
+            <a href="#" class="buy-btn">Buy Now</a>
+        </div>
+
+         <div class="product-card">
+            <img src="mouse.jpg" alt="">
+            <h3>Gaming Mouse RGB</h3>
+            <p>Customizable buttons with RGB lighting.</p>
+            <div class="price">₹799</div>
+            <a href="#" class="buy-btn">Buy Now</a>
+        </div>
+
+         <div class="product-card">
             <img src="mouse.jpg" alt="">
             <h3>Gaming Mouse RGB</h3>
             <p>Customizable buttons with RGB lighting.</p>
